[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/finance.gd" type="Script" id=1]
[ext_resource path="res://font/popupbuttonfont.tres" type="DynamicFont" id=2]

[node name="Root" type="Control"]
script = ExtResource( 1 )

[node name="popup" type="PopupPanel" parent="."]
visible = true
margin_right = 298.0
margin_bottom = 115.0
popup_exclusive = true

[node name="vbox" type="VBoxContainer" parent="popup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 294.0
margin_bottom = 189.0
custom_constants/separation = 10

[node name="localad" type="Button" parent="popup/vbox"]
margin_right = 290.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "Small Local Ad ($ 100)"

[node name="localad2" type="Button" parent="popup/vbox"]
margin_top = 39.0
margin_right = 290.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
text = "Large Local Ad ($ 500)"

[node name="nationalad" type="Button" parent="popup/vbox"]
margin_top = 78.0
margin_right = 290.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Small National Ad ($ 2000)"

[node name="nationalad2" type="Button" parent="popup/vbox"]
margin_top = 117.0
margin_right = 290.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 2 )
text = "Large National Ad ($ 5000)"

[node name="cancel" type="Button" parent="popup/vbox"]
margin_top = 156.0
margin_right = 290.0
margin_bottom = 185.0
custom_fonts/font = ExtResource( 2 )
text = "Cancel"
[connection signal="pressed" from="popup/vbox/localad" to="." method="_on_localad_pressed"]
[connection signal="pressed" from="popup/vbox/localad2" to="." method="_on_localad2_pressed"]
[connection signal="pressed" from="popup/vbox/nationalad" to="." method="_on_nationalad_pressed"]
[connection signal="pressed" from="popup/vbox/nationalad2" to="." method="_on_nationalad2_pressed"]
[connection signal="pressed" from="popup/vbox/cancel" to="." method="_on_cancel_pressed"]
